--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ streamlit==1.0.0  # Version may vary, check for the latest version
 pandas==1.3.3  # Version may vary
 scikit-learn==0.24.2  # Version may vary
 numpy==1.21.2  # Version may vary
+matplotlib==3.6.2
+seaborn==0.10.1
